Remove link to Bio21

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -47,28 +47,24 @@
                 </div>
                 <table class="box">
                     <tr>
-                        <td style="width: 25%";><span class="fa fa-wrench fa-2x"><br><br></span></td>
-                        <td style="width: 25%";"><span class="fa fa-key fa-2x"><br><br></span></td>
-                        <td style="width: 25%";"><span class="fa fa-trophy fa-2x"><br><br></span></td>
-                        <td style="width: 25%";"><span class="fa fa-github fa-2x"><br><br></span></td>
+                        <td style="width: 25%; padding:0 15px 0 15px;"><span class="fa fa-wrench fa-2x"><br><br></span></td>
+                        <td style="width: 25%; padding:0 15px 0 15px;"><span class="fa fa-key fa-2x"><br><br></span></td>
+                        <td style="width: 25%; padding:0 15px 0 15px;"><span class="fa fa-github fa-2x"><br><br></span></td>
                     </tr>
                     <tr>
-                        <td><h3>Get Started</h3></td>
-                        <td><h3>Our team</h3></td>
-                        <td><h3>About Bio21</h3></td>
-                        <td><h3>Kaptive on GitHub</h3></td>
+                        <td style="padding:0 15px 0 15px;"><h3>Get Started</h3></td>
+                        <td style="padding:0 15px 0 15px;"><h3>Our team</h3></td>
+                        <td style="padding:0 15px 0 15px;"><h3>Kaptive on GitHub</h3></td>
                     </tr>
                     <tr>
-                        <td style="vertical-align: top;"><p><strong>Kaptive</strong> is an open source project for the biomedical community, licensed under GNU General Public License version 3.</p></td>
-                        <td style="vertical-align: top;"><p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Lab in the Bio21 Molecular Science &amp; Biotechnology Institute.</p></td>
-                        <td style="vertical-align: top;"><p>The Bio21 Molecular Science &amp; Biotechnology Institute is a multidisciplinary research centre at the University of Melbourne.</p></td>
-                        <td style="vertical-align: top;"><p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> K-locus, O-locus or other databases.</p></td>
+                        <td style="vertical-align: top; padding:0 15px 0 15px;"><p><strong>Kaptive</strong> is an open source project for the biomedical community, licensed under GNU General Public License version 3.</p></td>
+                        <td style="vertical-align: top; padding:0 15px 0 15px;"><p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Lab in the Bio21 Molecular Science &amp; Biotechnology Institute.</p></td>
+                        <td style="vertical-align: top; padding:0 15px 0 15px;"><p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> K-locus, O-locus or other databases.</p></td>
                     </tr>
                     <tr>
-                        <td><a href="/kaptive/default/jobs" class="button button-small">Submit job</a></td>
-                        <td><a href="https://holtlab.net/" class="button button-small">Visit Holt lab</a></td>
-                        <td><a href="http://www.bio21.unimelb.edu.au/" class="button button-small">Visit Bio21</a></td>
-                        <td><a href="https://github.com/katholt/Kaptive" class="button button-small">Visit GitHub</a></td>
+                        <td style="padding:0 15px 0 15px;"><a href="/kaptive/default/jobs" class="button button-small">Submit job</a></td>
+                        <td style="padding:0 15px 0 15px;"><a href="https://holtlab.net/" class="button button-small">Visit Holt lab</a></td>
+                        <td style="padding:0 15px 0 15px;"><a href="https://github.com/katholt/Kaptive" class="button button-small">Visit GitHub</a></td>
                     </tr>
                 </table>
             </div>
