--- a/views/default/jobs.html
+++ b/views/default/jobs.html
@@ -6,4 +6,4 @@
 <br>
 <strong>It may take a few minutes to upload the file. Please do not close this page or start a new job until the upload is complete.</strong>
 <p>&nbsp;</p>
-<strong>* To submit multiple jobs, upload a zip or tar.gz with one fasta file per sample.</strong>
+<strong>* Assemblies should be in fasta format and can be gzipped. To submit multiple jobs, upload a zip or tar.gz with one fasta file per sample.</strong>
