make links ng href

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -7,10 +7,10 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-    <link href="{{=URL('static','css/font-awesome.min.css')}}" rel="stylesheet" />
-    <link href="{{=URL('static','css/default.css')}}" rel="stylesheet" type="text/css" media="all" />
-    <link href="{{=URL('static','css/fonts.css')}}" rel="stylesheet" type="text/css" media="all" />
-    <link href="{{=URL('static','images/favicon.ico')}}" type='image/x-icon' rel='shortcut icon' />
+    <link ng href="{{=URL('static','css/font-awesome.min.css')}}" rel="stylesheet"/>
+    <link ng href="{{=URL('static','css/default.css')}}" rel="stylesheet" type="text/css" media="all" />
+    <link ng href="{{=URL('static','css/fonts.css')}}" rel="stylesheet" type="text/css" media="all" />
+    <link ng href="{{=URL('static','images/favicon.ico')}}" type='image/x-icon' rel='shortcut icon' />
     <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 </head>
 
