update readme for A. baumannii databases

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -30,20 +30,41 @@
                 </div>
             </div>
         </div>
+        <div class="alert alert-info">
+            <p style="text-align:center; font-size:28px; color:#dd1c77;"> <b>PLEASE NOTE on X date Kaptive Web moved to a new host server. You can access results submitted to the old sever <a href="#" class="alert-link">here</a> until X date.</b></p>
+        </div>
         <div id="wrapper2">
             <div id="welcome" class="container">
                 <div class="title" id="about">
                     <h2>About Kaptive</h2>
                 </div>
-                <p style="font-size:25px"><strong>Kaptive</strong> is a tool for <i>Klebsiella</i> locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each finds the best matching locus from a reference database. References for known K-loci (capsule) and O-loci (lipopolysaccharide) are available in Kaptive's web interface.</p>
+                <p style="font-size:25px"><strong>Kaptive</strong> is a tool for bacterial capsule and lipopolysaccharide locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each finds the best matching locus from a reference database. References for <i>Klebsiella pneumoniae</i> species complex and <i>Acinetobacter baumannii</i> are available in Kaptive's web interface.</p>
+                <p></p>
+                <p style="font-size:25px">The <strong>reference databases</strong> are curated by <a href="https://research.monash.edu/en/persons/kelly-wyres" rel="nofollow">Kelly Wyres</a> (Monash University, Australia) and <a href="https://staff.qut.edu.au/staff/johanna.kenyon" rel="nofollow">Johanna Kenyon</a> (Queensland University of Technology, Australia). Please <a href="mailto:kaptive.typing@gmail.com">contact us</a> if you have a novel locus that you would like to be included.</p>
             </div>
         </div>
         <div id="wrapper3">
             <div id="portfolio" class="container">
                 <div class="title">
-                    <h2>Citation</h2>
+                    <h2>Citations</h2>
                     <p></p>
-                    <p style="font-size:20px">Wyres KL, Wick RR, Gorrie C, Jenney A, Follador R, Thomson NR and Holt KE 2016.<br> <strong>Identification of <i>Klebsiella</i> capsule synthesis loci from whole genome data. <i>Microbial Genomics</i> doi: <a href="http://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000102" rel="nofollow">10.1099/mgen.0.000102 </a></strong></p>
+                    <p style="font-size:20px">If you use <strong>Kaptive's web interface</strong> please cite the paper below along with the reference for the relevant locus database(s).</p>
+                    <p></p>
+                    <p style="font-size:20px">Wick RR, Heinz E, Holt KE and Wyres KL 2018.<br> Kaptive Web: user-friendly capsule and lipopolysaccharide serotype prediction for <i>Klebsiella</i> genomes. <i>Journal of Clinical Microbiology</i> doi: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">56(6). e00197-18</a></p>
+                    <p></p>
+                    <p></p>
+                    <p style="font-size:20px"><b><i>K. pneumoniae</i> species complex capsule (K) locus databases</b></p>
+                    <p style="font-size:20px">Wyres KL, Wick RR, Gorrie C, Jenney A, Follador R, Thomson NR and Holt KE 2016.<br> Identification of <i>Klebsiella</i> capsule synthesis loci from whole genome data. <i>Microbial Genomics</i> doi: <a href="http://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000102" rel="nofollow">10.1099/mgen.0.000102 </a></p>
+                    <p></p>
+                    <p style="font-size:20px"><b><i>K. pneumoniae</i> species complex LPS (O) locus database</b></p>
+                    <p style="font-size:20px">Wick RR, Heinz E, Holt KE and Wyres KL 2018.<br> Kaptive Web: user-friendly capsule and lipopolysaccharide serotype prediction for <i>Klebsiella</i> genomes. <i>Journal of Clinical Microbiology</i> doi: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">56(6). e00197-18</a></p>
+                    <p></p>
+                    <p style="font-size:20px"><b><i>A. baumannii</i> capsule (K) and LPS (OC) locus databases</b></p>
+                    <p style="font-size:20px">TBD<br> TBD <i>TBD</i> doi: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">TBD</a></p>
+                    <p style="font-size:20px">A full list of citations for the individual <i>A. baumannii</i> K- and OC- locus reference sequences can be found <a href="https://github.com/katholt/Kaptive" rel="nofollow">here</a>.</p>
+                    <p></p>
+                    <p style="font-size:20px"><b>Current database version (as of 1st Dec 2019): Kaptive v0.7.0</b></p>
+
                 </div>
                 <table class="box">
                     <tr>
@@ -53,13 +74,13 @@
                     </tr>
                     <tr>
                         <td style="padding:0 15px 0 15px;"><h3>Get Started</h3></td>
-                        <td style="padding:0 15px 0 15px;"><h3>Our team</h3></td>
+                        <td style="padding:0 15px 0 15px;"><h3>Kaptive team</h3></td>
                         <td style="padding:0 15px 0 15px;"><h3>Kaptive on GitHub</h3></td>
                     </tr>
                     <tr>
                         <td style="vertical-align: top; padding:0 15px 0 15px;"><p><strong>Kaptive</strong> is an open source project for the biomedical community, licensed under GNU General Public License version 3.</p></td>
-                        <td style="vertical-align: top; padding:0 15px 0 15px;"><p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Lab in the Bio21 Molecular Science &amp; Biotechnology Institute.</p></td>
-                        <td style="vertical-align: top; padding:0 15px 0 15px;"><p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> K-locus, O-locus or other databases.</p></td>
+                        <td style="vertical-align: top; padding:0 15px 0 15px;"><p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Lab, Monash University.</p></td>
+                        <td style="vertical-align: top; padding:0 15px 0 15px;"><p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> or <i> A. baumannii</i> K-locus, O/OC-locus or other databases.</p></td>
                     </tr>
                     <tr>
                         <td style="padding:0 15px 0 15px;"><a href="/kaptive/default/jobs" class="button button-small">Submit job</a></td>
