--- a/views/default/index.html
+++ b/views/default/index.html
@@ -30,17 +30,15 @@
                 </div>
             </div>
         </div>
-        <div class="alert alert-info">
-            <p style="text-align:center; font-size:28px; color:#dd1c77;"> <b>PLEASE NOTE on X date Kaptive Web moved to a new host server. You can access results submitted to the old sever <a href="#" class="alert-link">here</a> until X date.</b></p>
         </div>
         <div id="wrapper2">
             <div id="welcome" class="container">
                 <div class="title" id="about">
                     <h2>About Kaptive</h2>
                 </div>
-                <p style="font-size:25px"><strong>Kaptive</strong> is a tool for bacterial capsule and lipopolysaccharide locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each finds the best matching locus from a reference database. References for <i>Klebsiella pneumoniae</i> species complex and <i>Acinetobacter baumannii</i> are available in Kaptive's web interface.</p>
+                <p style="font-size:25px"><strong>Kaptive</strong> is a tool for bacterial surface polysaccharide locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each finds the best matching locus from a reference database. References for <i>Klebsiella pneumoniae</i> species complex and <i>Acinetobacter baumannii</i> are available in Kaptive's web interface.</p>
                 <p></p>
-                <p style="font-size:25px">The <strong>reference databases</strong> are curated by <a href="https://research.monash.edu/en/persons/kelly-wyres" rel="nofollow">Kelly Wyres</a> (Monash University, Australia) and <a href="https://staff.qut.edu.au/staff/johanna.kenyon" rel="nofollow">Johanna Kenyon</a> (Queensland University of Technology, Australia). Please <a href="mailto:kaptive.typing@gmail.com">contact us</a> if you have a novel locus that you would like to be included.</p>
+                <p style="font-size:25px">The <strong>reference databases</strong> are curated by <a href="https://research.monash.edu/en/persons/kelly-wyres" rel="nofollow">Kelly Wyres</a> (Monash University, Australia) and <a href="https://research.qut.edu.au/infectionandimmunity/projects/bacterial-polysaccharide-research/" rel="nofollow">Johanna Kenyon</a> (Queensland University of Technology, Australia). Please <a href="mailto:kaptive.typing@gmail.com">contact us</a> if you have a novel locus that you would like to be included.</p>
             </div>
         </div>
         <div id="wrapper3">
@@ -60,10 +58,10 @@
                     <p style="font-size:20px">Wick RR, Heinz E, Holt KE and Wyres KL 2018.<br> Kaptive Web: user-friendly capsule and lipopolysaccharide serotype prediction for <i>Klebsiella</i> genomes. <i>Journal of Clinical Microbiology</i> doi: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">56(6). e00197-18</a></p>
                     <p></p>
                     <p style="font-size:20px"><b><i>A. baumannii</i> capsule (K) and LPS (OC) locus databases</b></p>
-                    <p style="font-size:20px">TBD<br> TBD <i>TBD</i> doi: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">TBD</a></p>
-                    <p style="font-size:20px">A full list of citations for the individual <i>A. baumannii</i> K- and OC- locus reference sequences can be found <a href="https://github.com/katholt/Kaptive" rel="nofollow">here</a>.</p>
+                    <p style="font-size:20px">Wyres KL, Cahill SM, Holt KE, Hall RM and Kenyon JJ 2019.<br> Identification of <i>Acinetobacter baumannii</i> loci for capsular polysaccharide (KL) and lipooligosaccharide outer core (OCL) synthesis in genome assemblies using curated reference databases compatible with Kaptive. <i>In preparation.</i>
+                    <p style="font-size:20px">A full list of citations for the individual <i>A. baumannii</i> K- and OC- locus reference sequences can be found <a href="https://github.com/katholt/Kaptive/tree/master/extras" rel="nofollow">here</a>.</p>
                     <p></p>
-                    <p style="font-size:20px"><b>Current database version (as of 1st Dec 2019): Kaptive v0.7.0</b></p>
+                    <p style="font-size:20px"><b>Current database version (as of 11th Dec 2019): Kaptive v0.7.0</b></p>
 
                 </div>
                 <table class="box">
