--- a/views/default/index.html
+++ b/views/default/index.html
@@ -48,17 +48,17 @@
                     <p></p>
                     <p style="font-size:20px">If you use <strong>Kaptive's web interface</strong> please cite the paper below along with the reference for the relevant locus database(s).</p>
                     <p></p>
-                    <p style="font-size:20px">Wick RR, Heinz E, Holt KE and Wyres KL 2018.<br> Kaptive Web: user-friendly capsule and lipopolysaccharide serotype prediction for <i>Klebsiella</i> genomes. <i>Journal of Clinical Microbiology</i> doi: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">56(6). e00197-18</a></p>
+                    <p style="font-size:20px">Wick RR, Heinz E, Holt KE and Wyres KL 2018.<br> Kaptive Web: user-friendly capsule and lipopolysaccharide serotype prediction for <i>Klebsiella</i> genomes. <i>Journal of Clinical Microbiology</i>: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">56(6). e00197-18</a></p>
                     <p></p>
                     <p></p>
                     <p style="font-size:20px"><b><i>K. pneumoniae</i> species complex capsule (K) locus databases</b></p>
                     <p style="font-size:20px">Wyres KL, Wick RR, Gorrie C, Jenney A, Follador R, Thomson NR and Holt KE 2016.<br> Identification of <i>Klebsiella</i> capsule synthesis loci from whole genome data. <i>Microbial Genomics</i> doi: <a href="http://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000102" rel="nofollow">10.1099/mgen.0.000102 </a></p>
                     <p></p>
                     <p style="font-size:20px"><b><i>K. pneumoniae</i> species complex LPS (O) locus database</b></p>
-                    <p style="font-size:20px">Wick RR, Heinz E, Holt KE and Wyres KL 2018.<br> Kaptive Web: user-friendly capsule and lipopolysaccharide serotype prediction for <i>Klebsiella</i> genomes. <i>Journal of Clinical Microbiology</i> doi: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">56(6). e00197-18</a></p>
+                    <p style="font-size:20px">Wick RR, Heinz E, Holt KE and Wyres KL 2018.<br> Kaptive Web: user-friendly capsule and lipopolysaccharide serotype prediction for <i>Klebsiella</i> genomes. <i>Journal of Clinical Microbiology</i>: <a href="https://jcm.asm.org/content/56/6/e00197-18.long" rel="nofollow">56(6). e00197-18</a></p>
                     <p></p>
                     <p style="font-size:20px"><b><i>A. baumannii</i> capsule (K) and LPS (OC) locus databases</b></p>
-                    <p style="font-size:20px">Wyres KL, Cahill SM, Holt KE, Hall RM and Kenyon JJ 2019.<br> Identification of <i>Acinetobacter baumannii</i> loci for capsular polysaccharide (KL) and lipooligosaccharide outer core (OCL) synthesis in genome assemblies using curated reference databases compatible with Kaptive. <i>In preparation.</i>
+                    <p style="font-size:20px">Wyres KL, Cahill SM, Holt KE, Hall RM and Kenyon JJ 2019.<br> Identification of <i>Acinetobacter baumannii</i> loci for capsular polysaccharide (KL) and lipooligosaccharide outer core (OCL) synthesis in genome assemblies using curated reference databases compatible with Kaptive. <a href="https://www.biorxiv.org/content/10.1101/869370v1" rel="nofollow">Preprinted in bioRxiv</a></p>
                     <p style="font-size:20px">A full list of citations for the individual <i>A. baumannii</i> K- and OC- locus reference sequences can be found <a href="https://github.com/katholt/Kaptive/tree/master/extras" rel="nofollow">here</a>.</p>
                     <p></p>
                     <p style="font-size:20px"><b>Current database version (as of 11th Dec 2019): Kaptive v0.7.0</b></p>
