db version on update home page

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -61,7 +61,7 @@
                     <p style="font-size:20px">Wyres KL, Cahill SM, Holt KE, Hall RM and Kenyon JJ 2020.<br> Identification of <i>Acinetobacter baumannii</i> loci for capsular polysaccharide (KL) and lipooligosaccharide outer core (OCL) synthesis in genome assemblies using curated reference databases compatible with Kaptive. <i>Microbial Genomics</i> doi: <a href="https://www.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000339" rel="nofollow">10.1099/mgen.0.000339</a></p>
                     <p style="font-size:20px">A full list of citations for the individual <i>A. baumannii</i> K- and OC- locus reference sequences can be found <a href="https://github.com/katholt/Kaptive/tree/master/extras" rel="nofollow">here</a>.</p>
                     <p></p>
-                    <p style="font-size:20px"><b>Current database version (as of 21st July 2020): Kaptive v0.7.1</b></p>
+                    <p style="font-size:20px"><b>Current database version (as of 3rd August 2020): Kaptive v0.7.2</b></p>
 
                 </div>
                 <table class="box">
