Specify the need for an intact locus when reporting a novel locus.

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <p style="font-size:25px"><strong>Kaptive</strong> is a tool for bacterial surface polysaccharide locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each finds the best matching locus from a reference database. References for <i>Klebsiella pneumoniae</i> species complex and <i>Acinetobacter baumannii</i> are available in Kaptive's web interface.</p>
                 <p></p>
-                <p style="font-size:25px">The <strong>reference databases</strong> are curated by <a href="https://research.monash.edu/en/persons/kelly-wyres" rel="nofollow">Kelly Wyres</a> (Monash University, Australia) and <a href="https://research.qut.edu.au/infectionandimmunity/projects/bacterial-polysaccharide-research/" rel="nofollow">Johanna Kenyon</a> (Queensland University of Technology, Australia). Please <a href="mailto:kaptive.typing@gmail.com">contact us</a> if you have a novel locus that you would like to be included.</p>
+                <p style="font-size:25px">The <strong>reference databases</strong> are curated by <a href="https://research.monash.edu/en/persons/kelly-wyres" rel="nofollow">Kelly Wyres</a> (Monash University, Australia) and <a href="https://research.qut.edu.au/infectionandimmunity/projects/bacterial-polysaccharide-research/" rel="nofollow">Johanna Kenyon</a> (Queensland University of Technology, Australia). Please <a href="mailto:kaptive.typing@gmail.com">contact us</a> if you have an intact novel locus that you would like to be included.</p>
             </div>
         </div>
         <div id="wrapper3">
