--- a/views/default/index.html
+++ b/views/default/index.html
@@ -36,9 +36,13 @@
                 <div class="title" id="about">
                     <h2>About Kaptive</h2>
                 </div>
-                <p style="font-size:25px"><strong>Kaptive</strong> is a tool for bacterial surface polysaccharide locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each finds the best matching locus from a reference database. References for <i>Klebsiella pneumoniae</i> species complex and <i>Acinetobacter baumannii</i> are available in Kaptive's web interface.</p>
+                <p style="font-size:25px"><strong>Kaptive</strong> is a tool for bacterial surface polysaccharide locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each finds the best matching locus from a reference database. References for <i>Klebsiella pneumoniae</i> species complex, <i>Acinetobacter baumannii</i> and <i>Vibrio parahaemolyticus</i> are available in Kaptive's web interface.</p>
                 <p></p>
                 <p style="font-size:25px">The <strong>reference databases</strong> are curated by <a href="https://research.monash.edu/en/persons/kelly-wyres" rel="nofollow">Kelly Wyres</a> (Monash University, Australia) and <a href="https://research.qut.edu.au/infectionandimmunity/projects/bacterial-polysaccharide-research/" rel="nofollow">Johanna Kenyon</a> (Queensland University of Technology, Australia). Please <a href="mailto:kaptive.typing@gmail.com">contact us</a> if you have an intact novel locus that you would like to be included.</p>
+                <p></p>
+                <p style="font-size:25px">The third-party database for <i>Vibrio parahaemolyticus</i> is maintained by <a href="https://github.com/aldertzomer/vibrio_parahaemolyticus_genomoserotyping"rel="nofollow">Aldert Zomer</a>.</p>
+                <p></p>
+                <p style="font-size:25px">The current versions (as at 14 November 2022) are: <strong>Kaptive Web v1.2.0 and Kaptive v2.0.4</strong>. The individual database versions are shown in the citations section.</p>
             </div>
         </div>
         <div id="wrapper3">
@@ -52,25 +56,26 @@
                     <p></p>
                     <p></p>
                     <p style="font-size:20px"><b><i>K. pneumoniae</i> species complex capsule (K) locus database</b></p>
-                    <p style="font-size:20px">Wyres KL, Wick RR, Gorrie C, Jenney A, Follador R, Thompson N and Holt KE 2016.<br> Identification of Klebsiella capsule synthesis loci from whole genome data. <i>Microbial Genomics</i> doi: <a href="https://www.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000102" rel="nofollow">https://doi.org/10.1099/mgen.0.000102 </a></p>
+                    <p style="font-size:20px">Lam MMC, Wick RR, Judd LM, Holt KE and Wyres KL 2022.<br> Kaptive 2.0: updated capsule and lipopolysaccharide locus typing for the Klebsiella pneumoniae species complex. <i>Microbial Genomics</i> doi: <a href="https://www.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000800" rel="nofollow">https://doi.org/10.1099/mgen.0.000800 </a></p>
+                    <p style="font-size:20px"><b>Current database version (as at 14 November 2022): v2.0.4</b></p>
                     <p></p>
                     <p style="font-size:20px"><b><i>K. pneumoniae</i> species complex LPS (O) locus database</b></p>
                     <p style="font-size:20px">Lam MMC, Wick RR, Judd LM, Holt KE and Wyres KL 2022.<br> Kaptive 2.0: updated capsule and lipopolysaccharide locus typing for the Klebsiella pneumoniae species complex. <i>Microbial Genomics</i> doi: <a href="https://www.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000800" rel="nofollow">https://doi.org/10.1099/mgen.0.000800 </a></p>
+                    <p style="font-size:20px"><b>Current database version (as at 14 November 2022): v2.0.4</b></p>
                     <p></p>
                     <p style="font-size:20px"><b><i>A. baumannii</i> capsule (K) locus database</b></p>
-                    <p style="font-size:20px">Cahill SM, Hall RM and Kenyon JJ 2022.<br> An update to the database for <i>Acinetobacter baumannii</i> capsular polysaccharide locus typing extends the extensive and diverse repertoire of genes found at and outside the K locus. <i>bioRxiv</i> doi: <a href="https://www.biorxiv.org/content/10.1101/2022.05.19.492579v1" rel="nofollow">https://doi.org/10.1101/2022.05.19.492579</a></p>
+                    <p style="font-size:20px">Cahill SM, Hall RM and Kenyon JJ 2022.<br> An update to the database for <i>Acinetobacter baumannii</i> capsular polysaccharide locus typing extends the extensive and diverse repertoire of genes found at and outside the K locus. <i>Microbial Genomics</i> doi: <a href="https://doi.org/10.1099/mgen.0.000878" rel="nofollow">https://doi.org/10.1099/mgen.0.000878</a></p>
+                    <p style="font-size:20px"><b>Current database version (as at 14 November 2022): v2.0.4</b></p>
                     <p></p>
                     <p style="font-size:20px"><b><i>A. baumannii</i> LPS (OC) locus database</b></p>
                     <p style="font-size:20px">Wyres KL, Cahill SM, Holt KE, Hall RM and Kenyon JJ 2020.<br> Identification of <i>Acinetobacter baumannii</i> loci for capsular polysaccharide (KL) and lipooligosaccharide outer core (OCL) synthesis in genome assemblies using curated reference databases compatible with Kaptive. <i>Microbial Genomics</i> doi: <a href="https://www.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000339" rel="nofollow">10.1099/mgen.0.000339</a></p>
+                    <p style="font-size:20px"><b>Current database version (as at 14 November 2022): v2.0.4</b></p>
                     <p></p>
                     <p style="font-size:20px">A full list of citations for the individual <i>A. baumannii</i> K- and OC- locus reference sequences can be found <a href="https://github.com/katholt/Kaptive/tree/master/extras" rel="nofollow">here</a>.</p>
                     <p></p>
                     <p style="font-size:20px"><b><i>V. parahaemolyticus</i> capsule (K) and LPS (O) locus databases</b></p>
                     <p style="font-size:20px">van der Graaf–van Bloois L, Chen H, Wagenaar JA, Zomer AL 2022.<br> Development of Kaptive databases for <i>Vibrio parahaemolyticus</i> O- and K-antigen serotyping. <i>bioRxiv</i> doi: <a href="https://www.biorxiv.org/content/10.1101/2021.07.06.451262v2" rel="nofollow">https://doi.org/10.1101/2021.07.06.451262</a></p>
-                    <p></p>
-                    <p></p>
-                    <p style="font-size:20px"><b>Current database version (as of 5th October 2022): Kaptive v2.0.4</b></p>
-
+                    <p style="font-size:20px"><b>Current database version (as at 14 November 2022): v0.0.1</b></p>
                 </div>
                 <table class="box">
                     <tr>
